[package]
name = "rusty"
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum  = { version = "0.7", default-features = false }
console_error_panic_hook = { version = "0.1.1" }
tower-service = "0.3.2"
wasm-bindgen-futures = "0.4"
worker = { version = "0.2.0", features = ["axum", "http"] }
worker-macros = { version = "0.2.0", features = ["http"] }
